--- a/src/app/layout/purchase-requisition/purchase-requisition.component.html
+++ b/src/app/layout/purchase-requisition/purchase-requisition.component.html
@@ -1,22 +1,46 @@
 <div>
-  <app-page-header [heading]="'Purchase Requisition List'" [icon]="'fa fa-university'"></app-page-header>
-  <div>
-    <div class="col-md-6 offset-md-6 pull-right" style="text-align: right">
-        <button type="button" class="btn btn-secondary"><i class="fa fa-question" aria-hidden="true"></i> Help</button>
-        <button type="button" class="btn btn-secondary"><i class="fa fa-refresh"></i> Reload</button>
-        <button type="button" class="btn btn-success" (click)="btnClickNav('purchase-requisition/add')"><i class="fa fa-plus"></i> New Purchase Organization</button>
+  <!-- <app-page-header [heading]="'Purchase Requisition List'" [icon]="'fa fa-university'"></app-page-header> -->
+  <div class="row">
+    <div class="col-md-6">
+      <h4 class="page-header">Purchase Requisition List</h4>
+    </div>
+    <div class="col-md-6 pull-right" style="text-align: right">
+      <button type="button" class="btn btn-secondary">
+        <i class="fa fa-question" aria-hidden="true"></i> Help</button>
+      <button type="button" class="btn btn-secondary">
+        <i class="fa fa-refresh"></i> Reload</button>
+      <button type="button" class="btn btn-success" (click)="btnClickNav('purchase-requisition/add')">
+        <i class="fa fa-plus"></i> New Purchase Organization</button>
     </div>
     <div class="clearfix"></div>
   </div>
-    
+
   <hr/>
   <div class="row">
     <div class="col-md-12">
-    <div class="card">
-      <div class="card-header">Purchase Requisition</div>
-      <table class="card-body table table-hover table-sm table-bordered">
+      <div class="card">
+        <div class="card-header">
+          <div class="row">
+            <div class="col-md-9">
+              <h5>Purchase Requisition</h5>
+            </div>
+            <div class="col-md-3">
+              <form role="form" (ngSubmit)="dataSearch()">
+                <div class="input-group">
+                  <input type="text" class="form-control" name="search" placeholder="Search" [(ngModel)]="search_key">
+                  <div class="input-group-append">
+                    <button class="btn btn-secondary" type="submit">
+                      <i class="fa fa-search"></i>
+                    </button>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+        <table class="card-body table table-hover table-sm table-bordered">
           <thead>
-          <tr>
+            <tr>
               <th>Sl.No.</th>
               <th>PR No</th>
               <th>Company</th>
@@ -29,10 +53,10 @@
               <th>Status</th>
               <th>Is approved</th>
               <th>Action</th>
-          </tr>
+            </tr>
           </thead>
           <tbody>
-          <tr>
+            <tr>
               <th scope="row">1</th>
               <td>17-18/02/I-0001</td>
               <td>Shyam Futuretech</td>
@@ -45,60 +69,76 @@
               <td>Finalised</td>
               <td>Finalised</td>
               <td>
-                <a href="javascript:void(0);" title="Edit" name="Edit"><i class="fa fa-eye"></i></a>
+                <a href="javascript:void(0);" title="Edit" name="Edit">
+                  <i class="fa fa-eye"></i>
+                </a>
               </td>
-              
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>17-18/02/I-0001</td>
-            <td>Shyam Futuretech</td>
-            <td>Testorg</td>
-            <td>Material Purchase</td>
-            <td>Shyam FT</td>
-            <td>kolkata, kolkata, WEST BENGAL, 700012</td>
-            <td>14-02-2018</td>
-            <td>admin</td>
-            <td>Finalised</td>
-            <td>Finalised</td>
-            <td>
-              <a href="javascript:void(0);" title="Edit" name="Edit"><i class="fa fa-eye"></i></a>
-            </td>
-            
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>17-18/02/I-0001</td>
-            <td>Shyam Futuretech</td>
-            <td>Testorg</td>
-            <td>Material Purchase</td>
-            <td>Shyam FT</td>
-            <td>kolkata, kolkata, WEST BENGAL, 700012</td>
-            <td>14-02-2018</td>
-            <td>admin</td>
-            <td>
-              <select class="form-control">
-                <option>Change Status</option>
-                <option>Cancel</option>
-                <option>Active</option>
-              </select>
-            </td>
-            <td>
-              <select class="form-control">
-                <option>Change Approve</option>
-                <option>Approve</option>
-                <option>Dis-Approve</option>
-              </select>
-            </td>
-            <td>
-              <a href="javascript:void(0);" title="Edit" name="Edit"><i class="fa fa-eye"></i></a>
-            </td>
-            
-          </tr>
-          
+
+            </tr>
+            <tr>
+              <th scope="row">2</th>
+              <td>17-18/02/I-0001</td>
+              <td>Shyam Futuretech</td>
+              <td>Testorg</td>
+              <td>Material Purchase</td>
+              <td>Shyam FT</td>
+              <td>kolkata, kolkata, WEST BENGAL, 700012</td>
+              <td>14-02-2018</td>
+              <td>admin</td>
+              <td>Finalised</td>
+              <td>Finalised</td>
+              <td>
+                <a href="javascript:void(0);" title="Edit" name="Edit">
+                  <i class="fa fa-eye"></i>
+                </a>
+              </td>
+
+            </tr>
+            <tr>
+              <th scope="row">2</th>
+              <td>17-18/02/I-0001</td>
+              <td>Shyam Futuretech</td>
+              <td>Testorg</td>
+              <td>Material Purchase</td>
+              <td>Shyam FT</td>
+              <td>kolkata, kolkata, WEST BENGAL, 700012</td>
+              <td>14-02-2018</td>
+              <td>admin</td>
+              <td>
+                <select class="form-control">
+                  <option>Change Status</option>
+                  <option>Cancel</option>
+                  <option>Active</option>
+                </select>
+              </td>
+              <td>
+                <select class="form-control">
+                  <option>Change Approve</option>
+                  <option>Approve</option>
+                  <option>Dis-Approve</option>
+                </select>
+              </td>
+              <td>
+                <a href="javascript:void(0);" title="Edit" name="Edit">
+                  <i class="fa fa-eye"></i>
+                </a>
+              </td>
+
+            </tr>
+            <!-- <tr *ngIf="purchaseRequisitionList.length == 0">
+              <td colspan="12" class="text-center">No record found</td>
+            </tr> -->
           </tbody>
-      </table>
+        </table>
+      </div>
     </div>
   </div>
+  <div class="row" *ngIf="totalpurchaseRequisitionList > 10">
+    <div class="col-md-12">
+      <div class="card-body pull-right">
+        <ngb-pagination [collectionSize]="totalpurchaseRequisitionList" [(page)]="defaultPagination" (pageChange)="pagination()"
+          size="sm"></ngb-pagination>
+      </div>
+    </div>
   </div>
 </div>
