--- a/src/app/layout/gst-rates/gst-rates-edit/gst-rates-edit.component.html
+++ b/src/app/layout/gst-rates/gst-rates-edit/gst-rates-edit.component.html
@@ -1,47 +1,66 @@
 <div>
-  <app-page-header [heading]="'GST Rate Edit'" [icon]="'fa fa-university'"></app-page-header>
-  <div>
-    <div class="col-md-6 offset-md-6 pull-right" style="text-align: right">
-        <button type="button" class="btn btn-secondary"><i class="fa fa-question" aria-hidden="true"></i> Help</button>
-        <button type="button" class="btn btn-secondary"><i class="fa fa-refresh"></i> Reload</button>
-        <button type="button" class="btn btn-success" (click)="btnClickNav('gst-rates')"><i class="fa fa-arrow-left"></i> Back</button>
-    </div>
-    <div class="clearfix"></div>
-  </div>
-  <hr/>
-  <div>
-      <div class="row">
-        <div class="col-md-12">
-            <form role="form">
-              <div class="card bg-light mb-3">
-                  <div class="card-header" style="background-color:#868e96; color: #fff;">GST Rate Edit</div>
-                  <div class="card-body">
-                      <div class="row">
-                          <div class="form-group col-md-3">
-                              <label>Identifiable Name</label>
-                              <input class="form-control" [(ngModel)]="gstRates.identifiable_name" name="identifiable_name" placeholder="Identifiable Name">
-                          </div>
-                          <div class="form-group col-md-3">
-                              <label>IGST(%)</label>
-                              <input class="form-control" [(ngModel)]="gstRates.igst" name="igst" placeholder="IGST">
-                          </div>
-                          <div class="form-group col-md-3">
-                            <label>CGST(%)</label>
-                            <input class="form-control" [(ngModel)]="gstRates.cgst" name="cgst" placeholder="CGST">
-                          </div>
-                          <div class="form-group col-md-3">
-                            <label>SGST(%)</label>
-                            <input class="form-control" [(ngModel)]="gstRates.sgst" name="sgst" placeholder="SGST">
-                          </div>
-                          <div class="form-group col-md-12" style="text-align: right">
-                              <button type="submit" class="btn btn-success">Submit</button>
-                              <button type="reset" class="btn btn-secondary">Reset</button>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-            </form>
+    <!-- <app-page-header [heading]="'GST Rate Edit'" [icon]="'fa fa-university'"></app-page-header> -->
+    <div class="row">
+        <div class="col-md-6">
+            <h4 class="page-header">GST Rate Edit</h4>
         </div>
-      </div>
-  </div>
+        <div class="col-md-6 pull-right" style="text-align: right">
+            <button type="button" class="btn btn-secondary">
+                <i class="fa fa-question" aria-hidden="true"></i> Help</button>
+            <button type="button" class="btn btn-secondary">
+                <i class="fa fa-refresh"></i> Reload</button>
+            <button type="button" class="btn btn-success" (click)="btnClickNav('gst-rates')">
+                <i class="fa fa-arrow-left"></i> Back</button>
+        </div>
+        <div class="clearfix"></div>
+    </div>
+    <hr/>
+    <div>
+        <div class="row">
+            <div class="col-md-12">
+                <form role="form" [formGroup]="form" novalidate>
+                    <div class="card bg-light mb-3">
+                        <div class="card-header" style="background-color:#868e96; color: #fff;">GST Rate Edit</div>
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="form-group col-md-3">
+                                    <label>Identifiable Name</label>
+                                    <input class="form-control" [(ngModel)]="gstRates.gst_pattern" name="gst_pattern" placeholder="Identifiable Name" formControlName="gst_pattern"
+                                        [ngClass]="displayFieldCss('gst_pattern')">
+                                    <div class="invalid-feedback" *ngIf="form.controls['gst_pattern'].hasError('required')">
+                                        Please enter identifiable name
+                                    </div>
+                                </div>
+                                <div class="form-group col-md-3">
+                                    <label>IGST(%)</label>
+                                    <input class="form-control" [(ngModel)]="gstRates.igst" name="igst" placeholder="IGST" formControlName="igst" [ngClass]="displayFieldCss('igst')">
+                                    <div class="invalid-feedback" *ngIf="form.controls['igst'].hasError('required')">
+                                        Please enter IGST
+                                    </div>
+                                </div>
+                                <div class="form-group col-md-3">
+                                    <label>CGST(%)</label>
+                                    <input class="form-control" [(ngModel)]="gstRates.cgst" name="cgst" placeholder="CGST" formControlName="cgst" [ngClass]="displayFieldCss('cgst')">
+                                    <div class="invalid-feedback" *ngIf="form.controls['cgst'].hasError('required')">
+                                        Please enter CGST
+                                    </div>
+                                </div>
+                                <div class="form-group col-md-3">
+                                    <label>SGST(%)</label>
+                                    <input class="form-control" [(ngModel)]="gstRates.sgst" name="sgst" placeholder="SGST" formControlName="sgst" [ngClass]="displayFieldCss('sgst')">
+                                    <div class="invalid-feedback" *ngIf="form.controls['sgst'].hasError('required')">
+                                        Please enter SGST
+                                    </div>
+                                </div>
+                                <div class="form-group col-md-12" style="text-align: right">
+                                    <button type="submit" class="btn btn-success" (click)="updateGstRate()">Submit</button>
+                                    <button type="reset" class="btn btn-secondary" (click)="reSet()">Reset</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
