--- a/src/app/layout/terms-condition/terms-condition-add/terms-condition-add.component.html
+++ b/src/app/layout/terms-condition/terms-condition-add/terms-condition-add.component.html
@@ -1,49 +1,68 @@
 <div>
-  <app-page-header [heading]="'Terms & Conditions Add'" [icon]="'fa fa-university'"></app-page-header>
-  <div>
-    <div class="col-md-6 offset-md-6 pull-right" style="text-align: right">
-        <button type="button" class="btn btn-secondary"><i class="fa fa-question" aria-hidden="true"></i> Help</button>
-        <button type="button" class="btn btn-secondary"><i class="fa fa-refresh"></i> Reload</button>
-        <button type="button" class="btn btn-success" (click)="btnClickNav('terms-condition')"><i class="fa fa-arrow-left"></i> Back</button>
-    </div>
-    <div class="clearfix"></div>
-  </div>
-  <hr/>
-  <div>
-      <div class="row">
-        <div class="col-md-12">
-            <form role="form">
-              <div class="card bg-light mb-3">
-                  <div class="card-header" style="background-color:#868e96; color: #fff;">Terms & Conditions Add</div>
-                  <div class="card-body">
-                      <div class="row">
-                          <div class="form-group col-md-6">
-                              <label>Term Type</label>
-                              <select class="form-control">
-                                <option value="0">Select Type</option>
-                                <option value="1">Payment</option>
-                                <option value="2">Delivery</option>
-                                <option value="3">Others</option>
-                              </select>
-                          </div>
-                          <div class="form-group col-md-6">
-                            <label>Terms & Conditions Name</label>
-                            <input class="form-control" [(ngModel)]="termsCondition.terms_name" name="terms_name" placeholder="Name">
-                          </div>
-                          <div class="form-group col-md-12">
-                              <label>Terms & Conditions</label>
-                              <textarea class="form-control" rows="3" [(ngModel)]="termsCondition.terms_conditions" name="terms_conditions" placeholder="Terms & Conditions">{{termsCondition.terms_Conditions}}</textarea>
-                          </div>
-                          
-                          <div class="form-group col-md-12" style="text-align: right">
-                              <button type="submit" class="btn btn-success">Submit</button>
-                              <button type="reset" class="btn btn-secondary">Reset</button>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-            </form>
+    <!-- <app-page-header [heading]="'Terms & Conditions Add'" [icon]="'fa fa-university'"></app-page-header> -->
+    <div class="row">
+        <div class="col-md-6">
+            <h4 class="page-header">Terms & Conditions Add</h4>
         </div>
-      </div>
-  </div>
+        <div class="col-md-6 pull-right" style="text-align: right">
+            <button type="button" class="btn btn-secondary">
+                <i class="fa fa-question" aria-hidden="true"></i> Help</button>
+            <button type="button" class="btn btn-secondary">
+                <i class="fa fa-refresh"></i> Reload</button>
+            <button type="button" class="btn btn-success" (click)="btnClickNav('terms-condition')">
+                <i class="fa fa-arrow-left"></i> Back</button>
+        </div>
+        <div class="clearfix"></div>
+    </div>
+    <hr/>
+    <div>
+        <div class="row">
+            <div class="col-md-12">
+                <form role="form" [formGroup]="form" novalidate>
+                    <div class="card bg-light mb-3">
+                        <div class="card-header" style="background-color:#868e96; color: #fff;">Terms & Conditions Add</div>
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="form-group col-md-6">
+                                    <label>Term Type</label>
+                                    <select class="form-control" name="term_type" formControlName="term_type" [ngClass]="displayFieldCss('term_type')">
+                                        <option value="">Select Type</option>
+                                        <option value="1">Payment</option>
+                                        <option value="2">Delivery</option>
+                                        <option value="3">Others</option>
+                                    </select>
+                                    <div class="invalid-feedback" *ngIf="form.controls['term_type'].hasError('required')">
+                                        Please select term type
+                                    </div>
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label>Company</label>
+                                    <select class="form-control" name="company" formControlName="company" [ngClass]="displayFieldCss('company')">
+                                        <option value="">Select Type</option>
+                                        <option value="{{country.id}}" *ngFor="let country of companyList">{{country.company_name}}</option>
+                                    </select>
+                                    <div class="invalid-feedback" *ngIf="form.controls['company'].hasError('required')">
+                                        Please select company
+                                    </div>
+                                </div>
+                                <div class="form-group col-md-12">
+                                    <label>Terms & Conditions</label>
+                                    <textarea class="form-control" rows="3" formControlName="term_text" [ngClass]="displayFieldCss('term_text')" name="term_text"
+                                        placeholder="Terms & Conditions"></textarea>
+                                    <div class="invalid-feedback" *ngIf="form.controls['term_text'].hasError('required')">
+                                        Please enter terms and conditions
+                                    </div>
+                                </div>
+
+                                <div class="form-group col-md-12" style="text-align: right">
+                                    <button type="submit" class="btn btn-success" (click)="addNewTerms()">Submit</button>
+                                    <button type="reset" class="btn btn-secondary" (click)="reSet">Reset</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
