--- a/src/app/layout/transport/transport.component.html
+++ b/src/app/layout/transport/transport.component.html
@@ -1,7 +1,10 @@
 <div>
-  <app-page-header [heading]="'Transport List'" [icon]="'fa fa-university'"></app-page-header>
-  <div>
-    <div class="col-md-6 offset-md-6 pull-right" style="text-align: right">
+  <!-- <app-page-header [heading]="'Transport List'" [icon]="'fa fa-university'"></app-page-header> -->
+  <div class="row">
+      <div class="col-md-6">
+          <h4 class="page-header">Transport List</h4>
+        </div>
+    <div class="col-md-6 pull-right" style="text-align: right">
         <button type="button" class="btn btn-secondary"><i class="fa fa-question" aria-hidden="true"></i> Help</button>
         <button type="button" class="btn btn-secondary"><i class="fa fa-refresh"></i> Reload</button>
         <button type="button" class="btn btn-success" (click)="btnClickNav('transport/add')"><i class="fa fa-plus"></i> New Transport</button>
@@ -13,7 +16,25 @@
   <div class="row">
     <div class="col-md-12">
     <div class="card">
-      <div class="card-header">Transport</div>
+      <div class="card-header">
+          <div class="row">
+              <div class="col-md-9">
+                <h5>Transport</h5>
+              </div>
+              <div class="col-md-3">
+                <form role="form" (ngSubmit)="dataSearch()">
+                  <div class="input-group">
+                    <input type="text" class="form-control" name="search" placeholder="Search" [(ngModel)]="search_key">
+                    <div class="input-group-append">
+                      <button class="btn btn-secondary" type="submit">
+                        <i class="fa fa-search"></i>
+                      </button>
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </div>
+      </div>
       <table class="card-body table table-hover table-sm table-bordered">
           <thead>
           <tr>
@@ -25,20 +46,37 @@
           </tr>
           </thead>
           <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>Demo Transporter name</td>
-            <td>18-11-2017</td>
-            <td><i class="fa fa-thumbs-up"></i> Active</td>
+          <tr *ngFor="let transport of transportList ; let i = index">
+            <th scope="row">{{i +1}}</th>
+            <td>{{transport.transporter_name}}</td>
+            <td>{{transport.created_at | date:'dd-MM-yyyy'}}</td>
+            <td><a href="javascript:void(0);" title="Active" name="Active" (click)="inactiveState(transport.id)" *ngIf="transport.status==true">
+                <i class="fa fa-thumbs-up"></i> Active</a>
+              <a href="javascript:void(0);" title="Inactive" name="Inactive" (click)="activeState(transport.id)" *ngIf="transport.status==false">
+                <i class="fa fa-thumbs-down"></i> Inactive</a>
+              </td>
             <td>
-              <a href="javascript:void(0);" title="Edit" name="Edit" [routerLink]="['/transport/edit', 1]"><i class="fa fa-edit"></i></a>&nbsp;&nbsp;&nbsp;
-              <a href="javascript:void(0);" title="Map" name="Map"><i class="fa fa-trash-o"></i></a>
+              <a href="javascript:void(0);" title="Edit" name="Edit" [routerLink]="['/transport/edit', transport.id]">
+                <i class="fa fa-edit"></i>
+              </a>&nbsp;&nbsp;&nbsp;
+              <a href="javascript:void(0);" title="Map" name="Map" (click)="deletetransport(transport.id)">
+                <i class="fa fa-trash-o"></i>
+              </a>
             </td>
           </tr>
-          
+          <tr *ngIf="transportList.length == 0">
+              <td colspan="5" class="text-center">No record found</td>
+            </tr>
           </tbody>
       </table>
     </div>
   </div>
   </div>
+  <div class="row" *ngIf="totaltransportList > 10">
+      <div class="col-md-12">
+        <div class="card-body pull-right">
+          <ngb-pagination [collectionSize]="totaltransportList" [(page)]="defaultPagination" (pageChange)="pagination()" size="sm"></ngb-pagination>
+        </div>
+      </div>
+    </div>
 </div>
